--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
     },
     "routes": [
         {
+            "src": "/(public/.*)",
+            "dest": "/$1"
+        },
+        {
             "src": "/(.*)",
             "dest": "/api/index.php"
         }
