Fix routing in vercel.json and add debug logging to GifsicleService

--- a/vercel.json
+++ b/vercel.json
@@ -6,11 +6,7 @@
     },
     "routes": [
         {
-            "src": "/(public/.*)",
-            "dest": "/$1"
-        },
-        {
-            "src": "/(.*)",
+            "src": "/(?!public/).*",
             "dest": "/api/index.php"
         }
     ]
