--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "functions": {
         "api/index.php": {
             "runtime": "vercel-php@0.7.1",
-            "includeFiles": "api/gifsicle"
+            "includeFiles": "bin/gifsicle-linux"
         }
     },
     "routes": [
